; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_stat_write.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_stat_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_server = type { i32 }
%struct.socket = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket_server*, %struct.socket*, i32)* @stat_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stat_write(%struct.socket_server* %0, %struct.socket* %1, i32 %2) #0 {
  %4 = alloca %struct.socket_server*, align 8
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i32, align 4
  store %struct.socket_server* %0, %struct.socket_server** %4, align 8
  store %struct.socket* %1, %struct.socket** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.socket*, %struct.socket** %5, align 8
  %9 = getelementptr inbounds %struct.socket, %struct.socket* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, %7
  store i32 %12, i32* %10, align 4
  %13 = load %struct.socket_server*, %struct.socket_server** %4, align 8
  %14 = getelementptr inbounds %struct.socket_server, %struct.socket_server* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.socket*, %struct.socket** %5, align 8
  %17 = getelementptr inbounds %struct.socket, %struct.socket* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32 %15, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
